<resources>
    <string name="app_name">My Financial ledger</string>
    <string name="won">￦</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">나만의 가계부</string>
    <string name="nav_header_subtitle">PRIMITIVE ANDROID-B TEAM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_goal">목표 금액 설정</string>
    <string name="menu_genre">지출 유형 설정</string>
    <string name="menu_bank">은행 설정</string>

    <string name="title_set_goal_period">1. 목표 기간을 설정하세요.\n(확인 버튼을 누른 당일 기준으로 시작됩니다.)</string>
    <string name="title_set_goal_price">2. 목표 금액을 설정하세요.</string>
    <string name="hint_set_goal_price">ex)50000</string>
    <string name="text_won_hangul">원</string>
    <string name="button_check">확인</string>
    <string name="button_cancel">취소</string>
    <string name="add">추가</string>
    <string name="item_name">이름</string>
</resources>