<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20sp">


    <TextView
        android:id="@+id/textView_title_set_goal_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_set_goal_period"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp" />

    <Spinner
        android:id="@+id/spinner_set_goal_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="20sp" />

    <TextView
        android:id="@+id/textView_title_set_goal_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_set_goal_price"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="20sp">

        <EditText
            android:id="@+id/editText_set_goal_price"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_set_goal_price"
            android:inputType="number" />

        <TextView
            android:id="@+id/text_won"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_won_hangul"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_set_goal_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_check"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp" />


</LinearLayout>