<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp" >

        <EditText
            android:id="@+id/editText_add_bank"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />

        <Button
            android:id="@+id/button_add_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_set_bank_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_check"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp" />

    <Button
        android:id="@+id/button_set_bank_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />

</LinearLayout>