<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_add_genre"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_add_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarFadeDuration="0"
            android:scrollbarSize="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_set_genre_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp"
        android:text="@string/button_check" />

    <Button
        android:id="@+id/button_set_genre_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />

</LinearLayout>